# simplex

./: .gitmodules  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/: camera.h  common.h  core.h  defaultServiceLocatorService.h  iRenderingService.h  iServiceLocatorService.h  math3d.h  mesh.h  perspectiveProjection.h  simplex.h  transform.h
engine/src/: camera.cpp  core.cpp  defaultServiceLocatorService.cpp  math3d.cpp  mesh.cpp  transform.cpp
examples/: CMakeLists.txt  coreInit.cpp  glRender.cpp  renderGL.cpp
include/: camera.h  common.h  core.h  logger.h  math3d.h  math_3d.h  mesh.h  pipeline.h  prerequisites.h  program.h  programme.h  shader.h  simplex.h  transform.h  util.h  window.h
renderers/GL/: CMakeLists.txt
renderers/GL/include/: glMeshInfo.h  glProgram.h  glRenderingService.h  glShader.h  glWindow.h
renderers/GL/resources/: default.vert
renderers/GL/src/: glMeshInfo.cpp  glRenderingService.cpp  glprogram.cpp  glshader.cpp  glwindow.cpp
simplexEngine/: CMakeLists.txt
simplexEngine/include/: common.h  core.h  defaultLoggingService.h  defaultServiceLocatorService.h  iLoggingService.h  iServiceLocatorService.h  mesh.h  program.h  shader.h  simplex.h  window.h
simplexEngine/src/: core.cpp  defaultLoggingService.cpp  defaultServiceLocatorService.cpp  math3d.cpp  mesh.cpp  program.cpp  shader.cpp  window.cpp
src/: logger.cpp  math3d.cpp  mesh.cpp  program.cpp  programme.cpp  shader.cpp  transform.cpp  util.cpp  window.cpp
tests/: demo1.cpp  renderingTest.cpp  shader_test.cpp
tests/10indexeddraws/: 10indexeddraws.cpp  shader.vert
tests/11concatenatingtransformations/: 11concatenatingtransformations.cpp  shader.vert
tests/4shaders/: 4shaders.cpp  shader.vert
tests/5uniforms/: 5uniforms.cpp  shader.vert
tests/6translation/: 6translation.cpp
tests/7_2drotation/: 7_2drotation.cpp  shader.vert
tests/8scale/: 8scale.cpp  shader.vert
tests/9interpolation/: 9interpolation.cpp
tests/demo1/: demo1.cpp
tests/demo2/: demo2.cpp  shader.vert
